Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Go/DriverExamples/wrappers/AstroFuncDll.h

// This wrapper file was generated automatically by the GenDllWrappers program.

// Notes: This function has been deprecated since v9.0. 
// Initializes AstroFunc DLL for use in the program.
// If this function returns an error, it is recommended that you stop the program immediately.
// 
// An error will occur if you forget to load and initialize all the prerequisite DLLs, as listed in the DLL Prerequisites section of the accompanying documentation, before using this DLL.
int AstroFuncInit(long apAddr);
// Retrieves information about the current version of AstroFunc.dll. The information is placed in the string parameter you pass in.
// The returned string provides information about the version number, build date, and platform.
void AstroFuncGetInfo(char infoStr[128]);
// Converts a set of Keplerian elements to a set of equinoctial elements. 
void KepToEqnx(double xa_kep[6], double xa_eqnx[6]);
// Converts a set of osculating Keplerian elements to osculating position and velocity vectors.
void KepToPosVel(double xa_kep[6], double pos[3], double vel[3]);
// Converts a set of Keplerian elements to Ubar, Vbar, and Wbar vectors.
void KepToUVW(double xa_kep[6], double uBar[3], double vBar[3], double wBar[3]);
// Converts a set of classical elements to a set of equinoctial elements. 
void ClassToEqnx(double xa_cls[6], double xa_eqnx[6]);
// Converts a set of equinoctial elements to a set of classical elements.
void EqnxToClass(double xa_eqnx[6], double xa_cls[6]);
// Converts a set of equinoctial elements to a set of Keplerian elements. 
void EqnxToKep(double xa_eqnx[6], double xa_kep[6]);
// Converts a set of equinoctial elements to position and velocity vectors.
void EqnxToPosVel(double xa_eqnx[6], double pos[3], double vel[3]);
// Converts position and velocity vectors to a set of equinoctial elements.
void PosVelToEqnx(double pos[3], double vel[3], double xa_eqnx[6]);
// Converts position and velocity vectors to a set of equinoctial elements with the given mu value. 
// This function is used when working with the SP propagator to get a more accurate set of equinoctial elements.
void PosVelMuToEqnx(double pos[3], double vel[3], double mu, double xa_eqnx[6]);
// Converts osculating position and velocity vectors to a set of osculating Keplerian elements.
void PosVelToKep(double pos[3], double vel[3], double xa_kep[6]);
// Converts osculating position and velocity vectors to a set of osculating Keplerian elements with the given value of mu.
// This function is used when working with the SP propagator to get a more accurate set of Keplerian elements.
void PosVelMuToKep(double pos[3], double vel[3], double mu, double xa_kep[6]);
// Converts position and velocity vectors to U, V, W vectors. See the remarks section for details.
// The resulting vectors have the following meanings.
// U vector: along radial direction
// V vector: W x U
// W vector: pos x vel
void PosVelToUUVW(double pos[3], double vel[3], double uvec[3], double vVec[3], double wVec[3]);
// Converts position and velocity vectors to U, V, W vectors. See the remarks section for details.
// The resulting vectors have the following meanings.
// U vector: V x W
// V vector: along velocity direction
// W vector: pos x vel
void PosVelToPTW(double pos[3], double vel[3], double uvec[3], double vVec[3], double wVec[3]);
// Solves Kepler's equation (M = E - e sin(E)) for the eccentric anomaly, E, by iteration.
double SolveKepEqtn(double xa_kep[6]);
// Computes true anomaly from a set of Keplerian elements.
double CompTrueAnomaly(double xa_kep[6]);
// This function is intended for future use.  No information is currently available.
// This function is intended for future use.  No information is currently available.
void AstroConvFrTo(int xf_Conv, double frArr[128], double toArr[128]);
// Index of Keplerian elements
// semi-major axis (km)
#define XA_KEP_A        0
// eccentricity (unitless)
#define XA_KEP_E        1
// inclination (deg)
#define XA_KEP_INCLI    2
// mean anomaly (deg)
#define XA_KEP_MA       3
// right ascension of the asending node (deg)
#define XA_KEP_NODE     4
// argument of perigee (deg)
#define XA_KEP_OMEGA    5
#define XA_KEP_SIZE    6
// Index of classical elements
// N mean motion (revs/day)
#define XA_CLS_N        0
// eccentricity (unitless)
#define XA_CLS_E        1
// inclination (deg)
#define XA_CLS_INCLI    2
// mean anomaly (deg)
#define XA_CLS_MA       3
// right ascension of the asending node (deg)
#define XA_CLS_NODE     4
// argument of perigee (deg)
#define XA_CLS_OMEGA    5
#define XA_CLS_SIZE     6
// Index of equinoctial elements
// Af (unitless)
#define XA_EQNX_AF      0
// Ag (unitless)
#define XA_EQNX_AG      1
// chi (unitless)
#define XA_EQNX_CHI     2
// psi (unitless)
#define XA_EQNX_PSI     3
// L mean longitude (deg)
#define XA_EQNX_L       4
// N mean motion (revs/day)
#define XA_EQNX_N       5
#define XA_EQNX_SIZE    6
// Indexes of AstroConvFrTo
// SGP4 (A, E, Incli, BStar) to SGP (nDot, n2Dot)
#define XF_CONV_SGP42SGP  101
// Indexes for topocentric components
// Right ascension (deg)
#define XA_TOPO_RA     0
// Declination (deg)
#define XA_TOPO_DEC    1
// Azimuth (deg)
#define XA_TOPO_AZ     2
// Elevation (deg)
#define XA_TOPO_EL     3
// Range (km)
#define XA_TOPO_RANGE  4
// Right ascension dot (deg/s)
#define XA_TOPO_RADOT  5
// Declincation dot (deg/s)
#define XA_TOPO_DECDOT 6
// Azimuth dot (deg/s)
#define XA_TOPO_AZDOT  7
// Elevation dot (deg/s)
#define XA_TOPO_ELDOT  8
// Range dot (km/s)
#define XA_TOPO_RANGEDOT  9
#define XA_TOPO_SIZE   10
// Indexes for RAE components
// Range (km)
#define XA_RAE_RANGE    0
// Azimuth (deg)
#define XA_RAE_AZ       1
// Elevation (deg)
#define XA_RAE_EL       2
// Range dot (km/s)
#define XA_RAE_RANGEDOT 3
// Azimuth dot (deg/s)
#define XA_RAE_AZDOT    4
// Elevation dot (deg/s)
#define XA_RAE_ELDOT    5
#define XA_RAE_SIZE     6
// Year of Equinox indicator
// Date of observation
#define YROFEQNX_OBTIME  0
// 0 Jan of Date
#define YROFEQNX_CURR    1
// J2000
#define YROFEQNX_2000    2
// B1950
#define YROFEQNX_1950    3