Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Ada/DriverExamples/wrappers/astrofuncdll.ads

-- This wrapper file was generated automatically by the GenDllWrappers program.

pragma Ada_2012;
pragma Style_Checks (Off);
pragma Warnings ("U");
with AstroAdaTypes; use AstroAdaTypes;

package AstroFuncDll is
    
    -- Index of Keplerian elements
    -- semi-major axis (km)
    XA_KEP_A : constant := 0;
    -- eccentricity (unitless)
    XA_KEP_E : constant := 1;
    -- inclination (deg)
    XA_KEP_INCLI : constant := 2;
    -- mean anomaly (deg)
    XA_KEP_MA : constant := 3;
    -- right ascension of the asending node (deg)
    XA_KEP_NODE : constant := 4;
    -- argument of perigee (deg)
    XA_KEP_OMEGA : constant := 5;
    XA_KEP_SIZE : constant := 6;
    
    -- Index of classical elements
    -- N mean motion (revs/day)
    XA_CLS_N : constant := 0;
    -- eccentricity (unitless)
    XA_CLS_E : constant := 1;
    -- inclination (deg)
    XA_CLS_INCLI : constant := 2;
    -- mean anomaly (deg)
    XA_CLS_MA : constant := 3;
    -- right ascension of the asending node (deg)
    XA_CLS_NODE : constant := 4;
    -- argument of perigee (deg)
    XA_CLS_OMEGA : constant := 5;
    XA_CLS_SIZE : constant := 6;
    
    -- Index of equinoctial elements
    -- Af (unitless)
    XA_EQNX_AF : constant := 0;
    -- Ag (unitless)
    XA_EQNX_AG : constant := 1;
    -- chi (unitless)
    XA_EQNX_CHI : constant := 2;
    -- psi (unitless)
    XA_EQNX_PSI : constant := 3;
    -- L mean longitude (deg)
    XA_EQNX_L : constant := 4;
    -- N mean motion (revs/day)
    XA_EQNX_N : constant := 5;
    XA_EQNX_SIZE : constant := 6;
    
    -- Indexes of AstroConvFrTo
    -- SGP4 (A, E, Incli, BStar) to SGP (nDot, n2Dot)
    XF_CONV_SGP42SGP : constant := 101;
    
    
    -- Indexes for topocentric components
    -- Right ascension (deg)
    XA_TOPO_RA : constant := 0;
    -- Declination (deg)
    XA_TOPO_DEC : constant := 1;
    -- Azimuth (deg)
    XA_TOPO_AZ : constant := 2;
    -- Elevation (deg)
    XA_TOPO_EL : constant := 3;
    -- Range (km)
    XA_TOPO_RANGE : constant := 4;
    -- Right ascension dot (deg/s)
    XA_TOPO_RADOT : constant := 5;
    -- Declincation dot (deg/s)
    XA_TOPO_DECDOT : constant := 6;
    -- Azimuth dot (deg/s)
    XA_TOPO_AZDOT : constant := 7;
    -- Elevation dot (deg/s)
    XA_TOPO_ELDOT : constant := 8;
    -- Range dot (km/s)
    XA_TOPO_RANGEDOT : constant := 9;
    XA_TOPO_SIZE : constant := 10;
    
    
    -- Indexes for RAE components
    -- Range (km)
    XA_RAE_RANGE : constant := 0;
    -- Azimuth (deg)
    XA_RAE_AZ : constant := 1;
    -- Elevation (deg)
    XA_RAE_EL : constant := 2;
    -- Range dot (km/s)
    XA_RAE_RANGEDOT : constant := 3;
    -- Azimuth dot (deg/s)
    XA_RAE_AZDOT : constant := 4;
    -- Elevation dot (deg/s)
    XA_RAE_ELDOT : constant := 5;
    XA_RAE_SIZE : constant := 6;
    
    
    -- Year of Equinox indicator
    -- Date of observation
    YROFEQNX_OBTIME : constant := 0;
    -- 0 Jan of Date
    YROFEQNX_CURR : constant := 1;
    -- J2000
    YROFEQNX_2000 : constant := 2;
    -- B1950
    YROFEQNX_1950 : constant := 3;
    

    -- Notes: This function has been deprecated since v9.0. 
    -- Initializes AstroFunc DLL for use in the program.
    -- If this function returns an error, it is recommended that you stop the program immediately.
    -- 
    -- An error will occur if you forget to load and initialize all the prerequisite DLLs, as listed in the DLL Prerequisites section of the accompanying documentation, before using this DLL.
    function AstroFuncInit
        (apAddr            :         Long_Long_Integer) return Integer
    with Import => True,
        Convention => C,
        External_Name => "AstroFuncInit";

    -- Retrieves information about the current version of AstroFunc.dll. The information is placed in the string parameter you pass in.
    -- The returned string provides information about the version number, build date, and platform.
    procedure AstroFuncGetInfo
        (infoStr           : out     String)
    with Import => True,
        Convention => C,
        External_Name => "AstroFuncGetInfo";
        --infoStr            : String    (1..128);

    -- Converts a set of Keplerian elements to a set of equinoctial elements. 
    procedure KepToEqnx
        (xa_kep            : in      Double1D;
        xa_eqnx            : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "KepToEqnx";
        --xa_kep             : Double1D  (1..6);
        --xa_eqnx            : Double1D  (1..6);

    -- Converts a set of osculating Keplerian elements to osculating position and velocity vectors.
    procedure KepToPosVel
        (xa_kep            : in      Double1D;
        pos                : out     Double1D;
        vel                : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "KepToPosVel";
        --xa_kep             : Double1D  (1..6);
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);

    -- Converts a set of Keplerian elements to Ubar, Vbar, and Wbar vectors.
    procedure KepToUVW
        (xa_kep            : in      Double1D;
        uBar               : out     Double1D;
        vBar               : out     Double1D;
        wBar               : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "KepToUVW";
        --xa_kep             : Double1D  (1..6);
        --uBar               : Double1D  (1..3);
        --vBar               : Double1D  (1..3);
        --wBar               : Double1D  (1..3);

    -- Converts a set of classical elements to a set of equinoctial elements. 
    procedure ClassToEqnx
        (xa_cls            : in      Double1D;
        xa_eqnx            : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "ClassToEqnx";
        --xa_cls             : Double1D  (1..6);
        --xa_eqnx            : Double1D  (1..6);

    -- Converts a set of equinoctial elements to a set of classical elements.
    procedure EqnxToClass
        (xa_eqnx           : in      Double1D;
        xa_cls             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "EqnxToClass";
        --xa_eqnx            : Double1D  (1..6);
        --xa_cls             : Double1D  (1..6);

    -- Converts a set of equinoctial elements to a set of Keplerian elements. 
    procedure EqnxToKep
        (xa_eqnx           : in      Double1D;
        xa_kep             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "EqnxToKep";
        --xa_eqnx            : Double1D  (1..6);
        --xa_kep             : Double1D  (1..6);

    -- Converts a set of equinoctial elements to position and velocity vectors.
    procedure EqnxToPosVel
        (xa_eqnx           : in      Double1D;
        pos                : out     Double1D;
        vel                : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "EqnxToPosVel";
        --xa_eqnx            : Double1D  (1..6);
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);

    -- Converts position and velocity vectors to a set of equinoctial elements.
    procedure PosVelToEqnx
        (pos               : in      Double1D;
        vel                : in      Double1D;
        xa_eqnx            : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "PosVelToEqnx";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --xa_eqnx            : Double1D  (1..6);

    -- Converts position and velocity vectors to a set of equinoctial elements with the given mu value. 
    -- This function is used when working with the SP propagator to get a more accurate set of equinoctial elements.
    procedure PosVelMuToEqnx
        (pos               : in      Double1D;
        vel                : in      Double1D;
        mu                 :         Long_Float;
        xa_eqnx            : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "PosVelMuToEqnx";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --xa_eqnx            : Double1D  (1..6);

    -- Converts osculating position and velocity vectors to a set of osculating Keplerian elements.
    procedure PosVelToKep
        (pos               : in      Double1D;
        vel                : in      Double1D;
        xa_kep             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "PosVelToKep";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --xa_kep             : Double1D  (1..6);

    -- Converts osculating position and velocity vectors to a set of osculating Keplerian elements with the given value of mu.
    -- This function is used when working with the SP propagator to get a more accurate set of Keplerian elements.
    procedure PosVelMuToKep
        (pos               : in      Double1D;
        vel                : in      Double1D;
        mu                 :         Long_Float;
        xa_kep             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "PosVelMuToKep";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --xa_kep             : Double1D  (1..6);

    -- Converts position and velocity vectors to U, V, W vectors. See the remarks section for details.
    -- The resulting vectors have the following meanings.
    -- U vector: along radial direction
    -- V vector: W x U
    -- W vector: pos x vel
    procedure PosVelToUUVW
        (pos               : in      Double1D;
        vel                : in      Double1D;
        uvec               : out     Double1D;
        vVec               : out     Double1D;
        wVec               : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "PosVelToUUVW";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --uvec               : Double1D  (1..3);
        --vVec               : Double1D  (1..3);
        --wVec               : Double1D  (1..3);

    -- Converts position and velocity vectors to U, V, W vectors. See the remarks section for details.
    -- The resulting vectors have the following meanings.
    -- U vector: V x W
    -- V vector: along velocity direction
    -- W vector: pos x vel
    procedure PosVelToPTW
        (pos               : in      Double1D;
        vel                : in      Double1D;
        uvec               : out     Double1D;
        vVec               : out     Double1D;
        wVec               : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "PosVelToPTW";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --uvec               : Double1D  (1..3);
        --vVec               : Double1D  (1..3);
        --wVec               : Double1D  (1..3);

    -- Solves Kepler's equation (M = E - e sin(E)) for the eccentric anomaly, E, by iteration.
    function SolveKepEqtn
        (xa_kep            : in      Double1D) return Long_Float
    with Import => True,
        Convention => C,
        External_Name => "SolveKepEqtn";
        --xa_kep             : Double1D  (1..6);

    -- Computes true anomaly from a set of Keplerian elements.
    function CompTrueAnomaly
        (xa_kep            : in      Double1D) return Long_Float
    with Import => True,
        Convention => C,
        External_Name => "CompTrueAnomaly";
        --xa_kep             : Double1D  (1..6);
